--- a/GoodHabitsApp/Base.lproj/Main.storyboard
+++ b/GoodHabitsApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wfZ-3i-FHQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wfZ-3i-FHQ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" alpha="0.75" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundimg" translatesAutoresizingMaskIntoConstraints="NO" id="XqU-Vt-WqM">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What's your name?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vyQ-BH-Te6">
                                 <rect key="frame" x="35" y="248" width="310" height="30"/>
@@ -43,9 +43,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="XqU-Vt-WqM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dfg-7B-kSz"/>
+                            <constraint firstItem="XqU-Vt-WqM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ijx-5G-HIr"/>
                             <constraint firstItem="XqU-Vt-WqM" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="kYL-eT-mOp"/>
                             <constraint firstItem="XqU-Vt-WqM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="oJW-RC-jM6"/>
-                            <constraint firstItem="XqU-Vt-WqM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rjc-Y9-DXa"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -77,30 +77,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RSD-xc-asF" customClass="FriendProgressBarView" customModule="GoodHabitsApp" customModuleProvider="target">
-                                <rect key="frame" x="76" y="145" width="240" height="128"/>
+                                <rect key="frame" x="87" y="151" width="200" height="200"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RJL-Vq-7UQ">
-                                <rect key="frame" x="56" y="345" width="65" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xG-hK-ld5">
-                                <rect key="frame" x="55" y="400" width="65" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oZR-bi-y4t">
-                                <rect key="frame" x="56" y="458" width="74" height="17"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -119,9 +98,6 @@
                     <connections>
                         <outlet property="FriendCircularProgress" destination="RSD-xc-asF" id="qOM-GN-gbu"/>
                         <outlet property="friendNameLabel" destination="gNd-WO-BC5" id="eQW-hZ-Ooa"/>
-                        <outlet property="subHabitFriendOneLabel" destination="RJL-Vq-7UQ" id="Sy3-e7-7YF"/>
-                        <outlet property="subHabitFriendThreeLabel" destination="oZR-bi-y4t" id="VaR-59-VQV"/>
-                        <outlet property="subHabitFriendTwoLabel" destination="1xG-hK-ld5" id="C8S-Kw-Bxa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y3g-GR-7qy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -136,29 +112,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundimg" translatesAutoresizingMaskIntoConstraints="NO" id="x0R-8s-WwH">
+                            <imageView userInteractionEnabled="NO" alpha="0.75" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundimg" translatesAutoresizingMaskIntoConstraints="NO" id="x0R-8s-WwH">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="621"/>
                             </imageView>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BgZ-bw-Doc" customClass="CircularProgressBarView" customModule="GoodHabitsApp" customModuleProvider="target">
-                                <rect key="frame" x="98" y="142" width="189" height="200"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8fu-Z2-kBb">
                                 <rect key="frame" x="16" y="49" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BgZ-bw-Doc" customClass="CircularProgressBarView" customModule="GoodHabitsApp" customModuleProvider="target">
+                                <rect key="frame" x="98" y="142" width="189" height="200"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PYJ-ck-gCl">
+                                <rect key="frame" x="0.0" y="350" width="375" height="268"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="x0R-8s-WwH" firstAttribute="trailing" secondItem="CnV-XM-4gl" secondAttribute="trailing" id="8Eh-Fn-3hR"/>
+                            <constraint firstItem="PYJ-ck-gCl" firstAttribute="trailing" secondItem="CnV-XM-4gl" secondAttribute="trailing" id="Eaa-dJ-RHh"/>
                             <constraint firstItem="x0R-8s-WwH" firstAttribute="leading" secondItem="CnV-XM-4gl" secondAttribute="leading" id="G17-3H-GVI"/>
+                            <constraint firstItem="BgZ-bw-Doc" firstAttribute="top" secondItem="8fu-Z2-kBb" secondAttribute="bottom" constant="72" id="K2C-cv-WUn"/>
+                            <constraint firstItem="PYJ-ck-gCl" firstAttribute="leading" secondItem="CnV-XM-4gl" secondAttribute="leading" id="NcG-2m-vgy"/>
                             <constraint firstItem="x0R-8s-WwH" firstAttribute="top" secondItem="Pfe-bR-xzp" secondAttribute="top" id="QIS-7q-7tJ"/>
+                            <constraint firstItem="PYJ-ck-gCl" firstAttribute="bottom" secondItem="CnV-XM-4gl" secondAttribute="bottom" id="QWb-W4-Nwx"/>
+                            <constraint firstItem="PYJ-ck-gCl" firstAttribute="top" secondItem="BgZ-bw-Doc" secondAttribute="bottom" constant="8" id="UMs-ay-pMq"/>
                             <constraint firstItem="BgZ-bw-Doc" firstAttribute="leading" secondItem="CnV-XM-4gl" secondAttribute="leading" constant="98" id="YT0-Gd-Evz"/>
                             <constraint firstItem="CnV-XM-4gl" firstAttribute="trailing" secondItem="BgZ-bw-Doc" secondAttribute="trailing" constant="88" id="amd-Ty-xcl"/>
                             <constraint firstItem="8fu-Z2-kBb" firstAttribute="top" secondItem="CnV-XM-4gl" secondAttribute="top" constant="29" id="o5B-zP-trX"/>
-                            <constraint firstItem="BgZ-bw-Doc" firstAttribute="top" secondItem="8fu-Z2-kBb" secondAttribute="bottom" constant="57" id="pJj-er-1nV"/>
                             <constraint firstItem="CnV-XM-4gl" firstAttribute="trailing" secondItem="8fu-Z2-kBb" secondAttribute="trailing" constant="16" id="v5m-q1-bo8"/>
                             <constraint firstAttribute="bottom" secondItem="x0R-8s-WwH" secondAttribute="bottom" constant="46" id="wEi-5W-kaS"/>
                             <constraint firstItem="8fu-Z2-kBb" firstAttribute="leading" secondItem="CnV-XM-4gl" secondAttribute="leading" constant="16" id="y3i-ow-mI6"/>
@@ -168,6 +151,7 @@
                     <tabBarItem key="tabBarItem" title="Progress" image="Investment" selectedImage="Investment" id="f66-bZ-7zs"/>
                     <connections>
                         <outlet property="CircularProgress" destination="BgZ-bw-Doc" id="9zW-fC-WDg"/>
+                        <outlet property="mScrollView" destination="PYJ-ck-gCl" id="YRE-Mf-ord"/>
                         <outlet property="nameLabel" destination="8fu-Z2-kBb" id="mIv-cp-rAU"/>
                     </connections>
                 </viewController>
